--- a/Tests/BasicCRUDTool2.Data.Tests/BasicCRUDTool2.Data.Tests.csproj
+++ b/Tests/BasicCRUDTool2.Data.Tests/BasicCRUDTool2.Data.Tests.csproj
@@ -152,6 +152,9 @@
       <Name>BasicCRUDTool2.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="IgnoredConfig.xml" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
