--- a/Tests/BasicCRUDTool2.Data.Tests/app.config
+++ b/Tests/BasicCRUDTool2.Data.Tests/app.config
@@ -72,7 +72,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-	<connectionStrings>
-		<add name="Testing" connectionString="Username=postgres;Database=CRUDTestDB;Host=localhost;Integrated Security=True"/>
-	</connectionStrings>
+	<connectionStrings configSource="connections.config"/>
 </configuration>
