corrected Data.Tests config

--- a/Tests/BasicCRUDTool2.Data.Tests/BasicCRUDTool2.Data.Tests.csproj
+++ b/Tests/BasicCRUDTool2.Data.Tests/BasicCRUDTool2.Data.Tests.csproj
@@ -153,7 +153,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="IgnoredConfig.xml" />
+    <None Include="IgnoredConfig.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
