--- a/Tests/BasicCRUDTool2.Data.Tests/app.config
+++ b/Tests/BasicCRUDTool2.Data.Tests/app.config
@@ -72,5 +72,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-	<connectionStrings configSource="connections.config"/>
+	<connectionStrings configSource="IgnoredConfig.config"/>
 </configuration>
