--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-#User Added Files
-IgnoredConfig.xml
+#User Added Files and Folders
+IgnoredConfig.config
 
 # User-specific files
 *.rsuser
